syntax = "proto3";

package conveyor.sidecar;

import "common.proto";

// Control plane service - runs on cluster (NO data transit)
service SidecarCoordinator {
  // Register sidecar with cluster, reporting local services
  rpc RegisterSidecar(RegisterSidecarRequest) returns (RegisterSidecarResponse);

  // Heartbeat with health updates, receive commands
  rpc Heartbeat(SidecarHeartbeatRequest) returns (HeartbeatResponse);

  // Watch for pipeline assignment changes
  rpc WatchPipelineAssignments(WatchAssignmentsRequest) returns (stream PipelineAssignmentEvent);
}

// Data plane service - runs on each sidecar
service SidecarDataPlane {
  // Local sources push records to sidecar
  rpc PushRecords(stream PushRecordsRequest) returns (stream PushRecordsResponse);

  // Receive records from remote sidecars (direct pod-to-pod)
  rpc ReceiveRecords(ReceiveRecordsRequest) returns (ReceiveRecordsResponse);
}

// ============== Control Plane Messages ==============

enum ServiceType {
  SERVICE_TYPE_UNSPECIFIED = 0;
  SERVICE_TYPE_SOURCE = 1;
  SERVICE_TYPE_TRANSFORM = 2;
  SERVICE_TYPE_SINK = 3;
}

message LocalService {
  string service_name = 1;
  ServiceType service_type = 2;
  string local_endpoint = 3;  // "127.0.0.1:8080"
}

message RegisterSidecarRequest {
  string sidecar_id = 1;
  string pod_name = 2;
  string namespace = 3;
  string sidecar_endpoint = 4;  // Pod IP:port for direct sidecar-to-sidecar
  repeated LocalService local_services = 5;
}

message RegisterSidecarResponse {
  bool success = 1;
  string error = 2;
  string registration_id = 3;
  repeated PipelineAssignment initial_assignments = 4;
}

message LocalServiceHealth {
  string service_name = 1;
  bool healthy = 2;
  uint64 active_requests = 3;
}

message SidecarLoad {
  float cpu_usage = 1;
  float memory_usage = 2;
  uint64 total_active_requests = 3;
  uint64 local_queue_depth = 4;
}

message SidecarHeartbeatRequest {
  string sidecar_id = 1;
  repeated LocalServiceHealth service_health = 2;
  SidecarLoad load = 3;
}

message HeartbeatResponse {
  bool acknowledged = 1;
  repeated SidecarCommand commands = 2;
}

message SidecarCommand {
  oneof command {
    PipelineAssignment assign = 1;
    PipelineRevocation revoke = 2;
    DrainCommand drain = 3;
  }
}

message PipelineAssignment {
  string pipeline_id = 1;
  bool is_local_complete = 2;  // All stages on this pod?
  repeated StageAssignment stages = 3;
}

message StageAssignment {
  string stage_id = 1;
  oneof target {
    string local_endpoint = 2;        // localhost routing
    RemoteSidecar remote_sidecar = 3; // direct pod-to-pod
  }
}

message RemoteSidecar {
  string sidecar_id = 1;
  string endpoint = 2;  // Direct address: "10.0.1.5:50053"
}

message PipelineRevocation {
  string pipeline_id = 1;
  bool drain_first = 2;
}

message DrainCommand {
  repeated string pipeline_ids = 1;  // Empty = drain all
  uint64 timeout_ms = 2;
}

message WatchAssignmentsRequest {
  string sidecar_id = 1;
}

message PipelineAssignmentEvent {
  EventType event_type = 1;
  PipelineAssignment assignment = 2;
}

enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  EVENT_TYPE_ASSIGNED = 1;
  EVENT_TYPE_UPDATED = 2;
  EVENT_TYPE_REVOKED = 3;
}

// ============== Data Plane Messages ==============

message PushRecordsRequest {
  oneof msg {
    PushInit init = 1;
    conveyor.common.RecordBatch batch = 2;
    PushHeartbeat heartbeat = 3;
  }
}

message PushInit {
  string source_id = 1;
  string pipeline_id = 2;
}

message PushHeartbeat {}

message PushRecordsResponse {
  oneof msg {
    PushAck ack = 1;
    PushBackpressure backpressure = 2;
    PushCredits credits = 3;
  }
}

message PushAck {
  string batch_id = 1;
  bool success = 2;
  repeated RecordAck record_acks = 3;
}

message RecordAck {
  conveyor.common.RecordId record_id = 1;
  AckStatus status = 2;
  string error = 3;
}

enum AckStatus {
  ACK_STATUS_UNSPECIFIED = 0;
  ACK_STATUS_SUCCESS = 1;
  ACK_STATUS_FAILED = 2;
  ACK_STATUS_RETRY = 3;
}

message PushBackpressure {
  bool pause = 1;
  uint32 wait_ms = 2;
  string reason = 3;
}

message PushCredits {
  uint64 granted = 1;
}

message ReceiveRecordsRequest {
  string pipeline_id = 1;
  string stage_id = 2;
  string source_sidecar_id = 3;
  conveyor.common.RecordBatch batch = 4;
}

message ReceiveRecordsResponse {
  bool success = 1;
  string error = 2;
  repeated RecordAck record_acks = 3;
}
